[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/default.tres" type="DynamicFont" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -214.5
margin_top = -21.0
margin_right = 214.5
margin_bottom = 21.0
text = "COME AND CATCH ME!"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = 200.0
margin_right = 109.0
margin_bottom = 24.0
text = "Start Game"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_Label_start_game"]
